--- a/Arc_Ai/Arc_Ai/core/static/styles/styles.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/styles.css
@@ -134,23 +134,33 @@ hr {
     flex-direction: column;
 }
 
-#logout {
+#logoutform {
+    margin: 35vh auto 0 auto;
+    border: none;
+    width: auto;
+    height: auto;
+}
+
+#logoutform button {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
-    gap: 20px;
-    margin: 43vh auto 0 auto;
-    padding: 10px;
+    gap: 10px;
+    background: transparent;
     border: 1px solid #353A56;
     border-radius: 10px;
+    color: #353A56;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 10px 20px;
+    width: 100%;
 }
-#logout:hover {
+
+#logoutform button:hover {
     background-color: #e0e0e0;
-    color: #FFF;
-    transition: background-color 0.3s, color 0.3s;
+    transition: background-color 0.3s;
 }
-#logout img {
+
+#logoutform img {
     width: 20px;
     height: auto;
 }
@@ -163,6 +173,3 @@ hr {
     margin: 0;
 }
 /* ============================= */
-#logout button {
-    text-decoration: none;
-}
