--- a/Arc_Ai/Arc_Ai/core/templates/core/saved.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/saved.html
@@ -34,10 +34,13 @@
                 <a href="#sec4" class="{% if active_page == 'home' %}active{% endif %}">Notification</a>
             </div>
         </div>
-        <div id="logout">
-            <img src="{% static 'Images/Logout.png' %}" alt="">
-            <h1>Logout</h1>
-        </div>
+        <form  id="logoutform" method="post" action="{% url 'core:logout' %}" style="display: inline;">
+            {% csrf_token %}
+            <button type="submit" class="logout">
+                <img src="{% static 'Images/Logout.png' %}" alt="Logout icon">
+                Log out
+            </button>
+        </form>
     </div>
     
     <div id="content">
