--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -55,9 +55,6 @@
                 <h1 class="Title">Continue Working</h1>
                 <hr class="divider"/>
             </div>
-
-            <a class="create_project" href="{% url 'core:create_project_details' %}">Create Project</a>
-
             {% if top_project %}
             <div class="continue-card">
                 <div>
@@ -108,6 +105,7 @@
                             <p>{{ top_project.finish_date|default:"-" }}</p>
                         </div>
                         <div>
+                            <a class="continue-btn" href="{% url 'core:create_project_details' %}">Create Project</a>
                             <!-- <button class="continue-btn">Continue</button> -->
                         </div>
                     </div>
