--- a/Arc_Ai/Arc_Ai/core/templates/core/user_involved_map.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/user_involved_map.html
@@ -13,70 +13,24 @@
 
 
 
-    <div id="header">
-        <div>
-            <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
-        </div>
-        <div id="header_nav" class="text_white">
-            <p><a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
-            <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
-            <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
-            <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
-            <p><a href="{% url 'core:profilepage' request.user.pk  %}" class="{% if active_page == 'email' %}active{% endif %}">Profile</a></p>
-        </div>
-        <div>
-            <img id="account_icn" src="{% static 'Images/Account.png' %}" alt="Account">
-        </div>
-    </div>
+
 
     <div id="organization_map_container">
         <div id="grid_background"></div>
         <!-- SVG container for arrows -->
-        <svg id="arrows_container"></svg>
         <div id="organization_map">
             <!-- User bubbles will be populated here -->
             <!-- Example user bubble structure -->
-            <div class="user_bubble" draggable="true">
-                <img src="{% static 'Images\avatar.png' %}" alt="User" class="user_avatar">
-                <div class="user_info">
-                    <span class="user_name">Aristique, Ginno D.</span>
-                </div>
-                <div class="Dropdown"></div>
-            </div>
         </div>
         
-        <!-- Zoom controls -->
-        <div id="zoom_controls">
-            <button id="zoom_in" title="Zoom In">+</button>
-            <button id="zoom_out" title="Zoom Out">−</button>
-            <button id="zoom_reset" title="Reset Zoom">Reset</button>
-        </div>
+
         
-        <!-- Add Save button -->
-        <div id="save_controls">
-            <button id="save_map" title="Save Map">Save Map</button>
-            <span id="save_status" class="hidden">Saved!</span>
-        </div>
         
-        <!-- Arrow controls at bottom center -->
-        <div id="arrow_controls">
-            <button id="create_arrow_btn" title="Create Connection">Connect Users</button>
-            <div id="arrow_properties" class="hidden">
-                <div class="property_group">
-                    <label>Direction:</label>
-                    <select id="arrow_direction">
-                        <option value="forward">Forward</option>
-                        <option value="backward">Backward</option>
-                        <option value="both">Both</option>
-                        <option value="none">None</option>
-                    </select>
-                </div>
-                <button id="delete_arrow_btn" title="Delete Connection">Delete</button>
-            </div>
         </div>
     </div>
 
-    <script src="{% static 'js/sidebar.js' %}"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <div id="user-map-container"></div>
     <script src="{% static 'js/usermap.js' %}"></script>
 </body>
 </html>
