--- a/Arc_Ai/Arc_Ai/core/templates/core/landingpage.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/landingpage.html
@@ -126,7 +126,7 @@
       </div>
       <div class="sec4_subcont">
         <img src="{% static 'Images/Profile6.png' %}" alt="Img6">
-        <h2>Christial Pillado</h2>
+        <h2>Paulo Pillado</h2>
         <p>Backend</p>
       </div>
     </div>
