--- a/Arc_Ai/Arc_Ai/core/templates/core/home.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/home.html
@@ -17,10 +17,10 @@
             <img src="{% static 'Images/Logo_LandingPage.png' %}" alt="ARC.AI Logo">
             <hr>
         </div>
-        <div id="upload">
+        <!-- <div id="upload">
             <img src="{% static 'Images/PlusIcon.png' %}" alt="ARC.AI Logo">
             <h1>Upload</h1>
-        </div>
+        </div> -->
         <div id="sidebar_cont">
             <div id="navigate">
                 <h1>Navigate</h1>
@@ -31,7 +31,9 @@
             <div id="settings">
                 <h1>Settings</h1>
                 <a href="{% url 'core:profilepage' request.user.pk %}" class="{% if active_page == 'profilepage' %}active{% endif %}">Profile</a>
-                <a href="{% url 'core:admin_project_page' %}" class="{% if active_page == 'home' %}active{% endif %}">Project Management</a>
+                {% if request.user.is_staff or request.user.is_superuser %}
+                    <a href="{% url 'core:admin_project_page' %}" class="{% if active_page == 'home' %}active{% endif %}">Project Management</a>
+                {% endif %}
             </div>
         </div>
         <form  id="logoutform" method="post" action="{% url 'core:logout' %}" style="display: inline;">
